<resources>
    <string name="app_name">MK GHOSTRUNNER</string>
    <string name="title_home">Home</string>
    <string name="title_run">Run</string>
    <string name="title_food">Food</string>
    <string name="title_login">Log In</string>
    <!-- Strings related to home fragment -->
    <string name="home_welcome">Welcome to MK GHOSTRUNNER</string>
    <string name="home_welcome_user">[USER]</string>
    <string name="home_date">View Previous Date</string>
    <string name="home_date_btn">Select Date</string>
    <string name="home_daily_values">Today</string>
    <string name="home_daily_dist">Distance Ran:</string>
    <string name="home_daily_dist_val">[VALUE]</string>
    <string name="home_daily_cal">Calories Consumed:</string>
    <string name="home_daily_cal_val">[VALUE]</string>
    <string name="home_logout">Log Out</string>
    <!-- Strings related to run fragment -->
    <string name="run_dist">Distance:</string>
    <string name="run_dist_val">[VALUE]</string>
    <string name="run_time">Time:</string>
    <string name="run_time_val">[VALUE]</string>
    <string name="run_speed">Average Speed (m/s):</string>
    <string name="run_speed_val">[VALUE]</string>
    <string name="run_speed_mph">Average Speed (mph):</string>
    <string name="run_speed_mph_val">[VALUE]</string>
    <string name="run_start_btn">START RUN</string>
    <!-- Strings related to running activity -->
    <string name="running_title">Run Started!</string>
    <string name="running_dist">Meters Traveled:</string>
    <string name="running_time">Time Elapsed:</string>
    <string name="running_speed">Average Speed (m/s):</string>
    <string name="running_speed_mph">Average Speed (mph):</string>
    <string name="running_dist_val">[VALUE]</string>
    <string name="running_time_val">[VALUE]</string>
    <string name="running_speed_val">[VALUE]</string>
    <string name="running_speed_mph_val">[VALUE]</string>
    <string name="running_btn">Finish Run</string>
    <string name="running_cancel_btn">Cancel Run</string>
    <!-- Strings related to food fragment -->
    <string name="food_name">[VALUE]</string>
    <string name="food_daily_totals">Daily Totals</string>
    <string name="food_cal">Calories:</string>
    <string name="food_cal_val">[VALUE]</string>
    <string name="food_carb">Carbs:</string>
    <string name="food_carb_val">[VALUE]</string>
    <string name="food_protein">Protein:</string>
    <string name="food_protein_val">[VALUE]</string>
    <string name="food_fat">Fat:</string>
    <string name="food_fat_val">[VALUE]</string>
    <string name="food_new_btn">Add New Food</string>
    <string name="food_options">Options</string>
    <string name="food_view_btn">View Today\'s Food</string>
    <!-- Strings related to add food -->
    <string name="title_add_food">Add Food</string>
    <string name="add_food_name">Food Name</string>
    <string name="add_food_cal_amount">Calorie Amount</string>
    <string name="add_food_carb_amount">Carbs Amount</string>
    <string name="add_food_protein_amount">Protein Amount</string>
    <string name="add_food_fat_amount">Total Fat Amount</string>
    <string name="add_food_add_food">Add This Food</string>

    <!-- Strings related to login -->
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_register">Register</string>
    <string name="login_login">Log In</string>
    <string name="login_taken">Username Already Taken</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_food">AddFood</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

<<<<<<< HEAD
    <string name="title_activity_add_food">Add Food</string>
    <string name="date_pick">Select Day</string>
    <string name="date_title">Selcet Day</string>
=======
    <!-- String related to view day activity -->
    <string name="day_date">[VALUE]</string>
    <string name="day_dist_ran">[VALUE]</string>
    <string name="day_time_ran">[VALUE]</string>
    <string name="day_calories">[VALUE]</string>
    <string name="day_carbs">[VALUE]</string>
    <string name="day_protein">[VALUE]</string>
    <string name="day_fat">[VALUE]</string>
>>>>>>> 90dc567cb0663aab1f57f08064289feb36485a06
</resources>