<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:stretchColumns="1">
        <TableRow>
            <TextView
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_span="2"
                android:gravity="center_horizontal"
                android:text="@string/title_home"
                android:textSize="25sp"
                android:textStyle="bold" />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/home_welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_welcome"
                android:gravity="center_horizontal"
                android:layout_span="2"
                android:textSize="24sp"
                app:layout_constraintTop_toTopOf="parent" />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/home_welcome_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_welcome_user"
                android:gravity="center_horizontal"
                android:layout_span="2"
                android:textSize="24sp"
                app:layout_constraintTop_toTopOf="parent" />
        </TableRow>
        <TableRow android:paddingTop="50dp">
            <TextView
                android:id="@+id/home_daily_values_title"
                android:layout_span="2"
                android:layout_gravity="center_horizontal"
                android:text="@string/home_daily_values"/>
        </TableRow>
        <TableRow android:paddingTop="20dp">
            <TextView
                android:id="@+id/home_daily_dist"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:text="@string/home_daily_dist"/>

            <TextView
                android:id="@+id/home_daily_dist_val"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:text="@string/home_daily_dist_val"/>
        </TableRow>
        <TableRow android:paddingTop="20dp">
            <TextView
                android:id="@+id/home_daily_cal"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:text="@string/home_daily_cal"/>

            <TextView
                android:id="@+id/home_daily_cal_val"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:text="@string/home_daily_cal_val"/>
        </TableRow>
        <TableRow android:paddingTop="50dp">
            <TextView
                android:id="@+id/home_date_prompt"
                android:layout_span="2"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:text="@string/home_date"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/home_date_input"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_span="2"
                android:text="@string/home_date_btn"/>
        </TableRow>
        <TableRow android:paddingTop="20dp">

            <Button
                android:id="@+id/home_logout_btn"
                android:layout_gravity="center_horizontal"
                android:layout_span="2"
                android:gravity="center_horizontal"
                android:text="@string/home_logout" />
        </TableRow>
    </TableLayout>




</androidx.constraintlayout.widget.ConstraintLayout>