<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.FoodFragment">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:stretchColumns="1">

        <TableRow android:padding="5dip">
            <TextView
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_span="2"
                android:gravity="center_horizontal"
                android:text="@string/title_food"
                android:textSize="25sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow android:padding="5dip">
            <TextView
                android:layout_span="2"
                android:textSize="20sp"
                android:gravity="center_horizontal"
                android:text="@string/food_daily_totals"/>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginLeft="10dp"
                android:text="@string/food_cal"
                android:textSize="16sp"
                android:layout_marginStart="10dp" />

            <TextView
                android:id="@+id/food_cal_val"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginLeft="10dp"
                android:text="@string/food_cal_val"
                android:padding="5dp"
                android:textColor="#000"
                android:layout_marginStart="10dp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/food_carb"
                android:textSize="16sp"
                android:layout_marginStart="10dp" />

            <TextView
                android:id="@+id/food_carb_val"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:padding="5dp"
                android:textColor="#000"
                android:text="@string/food_carb_val"
                android:layout_marginStart="10dp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/food_protein"
                android:textSize="16sp"
                android:layout_marginStart="10dp" />

            <TextView
                android:id="@+id/food_protein_val"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:padding="5dp"
                android:textColor="#000"
                android:text="@string/food_protein_val"
                android:layout_marginStart="10dp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/food_fat"
                android:textSize="16sp"
                android:layout_marginStart="10dp" />

            <TextView
                android:id="@+id/food_fat_val"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="20dp"
                android:padding="5dp"
                android:textColor="#000"
                android:text="@string/food_fat_val"
                android:layout_marginStart="10dp" />
        </TableRow>

        <TableRow android:padding="5dip">
            <TextView
                android:layout_span="2"
                android:textSize="20sp"
                android:gravity="center_horizontal"
                android:text="@string/food_options"/>
        </TableRow>

        <TableRow android:layout_marginTop="20dp">

            <Button
                android:id="@+id/food_new_btn"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_span="2"
                android:background="#0ff"
                android:text="@string/food_new_btn"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow android:layout_marginTop="20dp">

            <Button
                android:id="@+id/food_view_btn"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_span="2"
                android:background="#0ff"
                android:text="@string/food_view_btn"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>