<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RunActivity">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:stretchColumns="1">


        <TableRow>
            <TextView
                android:layout_span="2"
                android:gravity="center_horizontal"
                android:textSize="25sp"
                android:textStyle="bold"
                android:text="@string/title_run"/>

        </TableRow>

        <TableRow android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/run_dist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:paddingLeft="10dp"
                android:paddingRight="0dp"
                android:text="@string/run_dist" />

            <TextView
                android:id="@+id/run_dist_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:paddingLeft="10dp"
                android:paddingRight="0dp"
                android:text="@string/run_dist_val" />
        </TableRow>

        <TableRow android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/run_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:paddingLeft="10dp"
                android:paddingRight="0dp"
                android:text="@string/run_time" />

            <TextView
                android:id="@+id/run_time_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:paddingLeft="10dp"
                android:paddingRight="0dp"
                android:text="@string/run_time_val" />
        </TableRow>

        <TableRow android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/run_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:paddingLeft="10dp"
                android:paddingRight="0dp"
                android:text="@string/run_speed" />

            <TextView
                android:id="@+id/run_speed_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:paddingLeft="10dp"
                android:paddingRight="0dp"
                android:text="@string/run_speed_val" />
        </TableRow>
        <TableRow android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/run_speed_mph"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:paddingLeft="10dp"
                android:paddingRight="0dp"
                android:text="@string/run_speed_mph" />

            <TextView
                android:id="@+id/run_speed_mph_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:paddingLeft="10dp"
                android:paddingRight="0dp"
                android:text="@string/run_speed_mph_val" />
        </TableRow>

        <TableRow android:layout_marginTop="20dp">
            <Button
                android:id="@+id/run_start_btn"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_span="2"
                android:text="@string/run_start_btn" />
        </TableRow>
    </TableLayout>
    <TableLayout
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableRow android:gravity="center">
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/home_home_btn"
                android:text="@string/title_home" />
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/home_run_btn"
                android:text="@string/title_run" />
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/home_food_btn"
                android:text="@string/title_food" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>