<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/run_start_btn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:stretchColumns="1">


        <TableRow>
            <TextView
                android:layout_span="2"
                android:gravity="center_horizontal"
                android:textSize="24sp"
                android:text="@string/title_run"/>

        </TableRow>

        <TableRow android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/run_dist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:paddingLeft="10dp"
                android:paddingRight="0dp"
                android:text="@string/run_dist" />

            <TextView
                android:id="@+id/run_dist_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:paddingLeft="10dp"
                android:paddingRight="0dp"
                android:text="@string/run_dist_val" />
        </TableRow>

        <TableRow android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/run_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:paddingLeft="10dp"
                android:paddingRight="0dp"
                android:text="@string/run_time" />

            <TextView
                android:id="@+id/run_time_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:paddingLeft="10dp"
                android:paddingRight="0dp"
                android:text="@string/run_time_val" />
        </TableRow>

        <TableRow android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/run_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:paddingLeft="10dp"
                android:paddingRight="0dp"
                android:text="@string/run_speed" />

            <TextView
                android:id="@+id/run_speed_val"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="0dp"
                android:paddingLeft="10dp"
                android:paddingRight="0dp"
                android:text="@string/run_speed_val" />
        </TableRow>

        <TableRow android:layout_marginTop="20dp">
            <Button
                android:id="@+id/button_id"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_span="2"
                android:text="@string/run_start_btn"
                android:textColor="#FFF"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>