<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">



    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mkghostrunner.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <argument
            android:name="userKey"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.mkghostrunner.ui.dashboard.RunFragment"
        android:label="@string/title_run"
        tools:layout="@layout/fragment_run" >
        <argument
            android:name="userKey"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.mkghostrunner.ui.notifications.FoodFragment"
        android:label="@string/title_food"
        tools:layout="@layout/fragment_notifications" >
        <argument
            android:name="userKey"
            app:argType="string" />
    </fragment>


</navigation>